# shao_buffett

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.lock.txt  requirements.txt  skills.md
ai/: conversation.py  engine.py  models.py  multimodal.py  router.py  tools.py
ai/prompts/: system.py  templates.py
bot/: client.py  events.py  main.py
bot/cogs/: admin.py  alerts.py  briefing.py  chat.py  dashboard.py  market.py  news.py  notes.py  portfolio.py  profile.py  report.py  research.py  watchlist.py
bot/views/: pagination.py
config/: constants.py  logging_config.py  settings.py
dashboard/: charts.py  generator.py  renderer.py
data/: cache.py  manager.py  rate_limiter.py
data/collectors/: arxiv_research.py  base.py  finnhub.py  fmp.py  fred.py  marketaux.py  polymarket.py  sec_edgar.py
data/processors/: analyst_processor.py  earnings_processor.py  (+5 more)
notifications/: dispatcher.py  filters.py  formatter.py  types.py
scheduler/: evening_summary.py  jobs.py  morning_briefing.py  proactive.py  scheduler.py
storage/: database.py
tests/: MANUAL_TEST_PLAN.md  conftest.py  test_activity_repo.py  test_cogs.py  test_constants.py  test_data_manager.py  test_engine.py  test_formatter.py  test_formatting.py  test_migrations.py  test_models.py  test_notes_repo.py  test_notification_types.py  test_polymarket.py  test_portfolio_repo.py  test_proactive.py  test_prompts.py  test_router.py  test_tools.py  test_upgrade.py
utils/: embed_builder.py  formatting.py  retry.py  time_utils.py
web/: app.py  auth.py
(+31 files in other folders)
