[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "buffet-shao"
version = "0.1.0"
description = "AI Financial Agent for Discord - Bloomberg terminal notifications"
requires-python = ">=3.11"
dependencies = [
    "py-cord>=2.6.0",
    "anthropic>=0.40.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "asyncpg>=0.29.0",
    "plotly>=5.22.0",
    "kaleido>=0.2.1",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
    "structlog>=24.1.0",
    "fredapi>=0.5.0",
    "quart>=0.19.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]
